Fixed #55 Change "it fits" handling; minor cosmetic changes

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -487,11 +487,11 @@ Settings.showTouchConfirmationLabel.text=Confirm touch\:
 Settings.sortCaseSensitiveLabel.text=Sort case-insensitive\:
 Settings.sortFoldersBeforeFilesLabel.text=Sort folders before files\:
 Settings.sortReverseLabel.text=Sort reverse\:
-Settings.tabPlacementlabel.text=Tab placement\:
-Settings.tabplacement.bottom=Bottom
-Settings.tabplacement.left=Left
-Settings.tabplacement.right=Right
-Settings.tabplacement.top=Top
+Settings.tabPlacementLabel.text=Tab placement\:
+Settings.tabPlacement.bottom=Bottom
+Settings.tabPlacement.left=Left
+Settings.tabPlacement.right=Right
+Settings.tabPlacement.top=Top
 Settings.textField.HintButtonColor.toolTipText=RGB color in hexadecimal
 Settings.this.title=Navigator Settings
 Task.no.repository.is.loaded=No repository is loaded
@@ -512,7 +512,9 @@ Transfer.original.storage.location.too.full=Original storage location too full f
 Transfer.previous.directory.was.not.empty=\  ! Previous directory was not empty: 
 Transfer.publisher.data.incomplete.missing.flavor=Publisher data incomplete, missing 'flavor'
 Transfer.received.subscriber.commands=Received subscriber commands: 
+Transfer.requesting.subscriber.collection=Requesting subscriber collection
 Transfer.requesting.subscriber.library=Requesting subscriber library
+Transfer.requesting.subscriber.targets=Requesting subscriber targets
 Transfer.rm.directory=\  > rm directory: 
 Transfer.rm.file=\  > rm file: 
 Transfer.subscriber.data.incomplete.missing.flavor=Subscriber data incomplete, missing 'flavor'
