More timeout adjustments for slow or large collections; Other minor tweaks

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -294,8 +294,8 @@ Navigator.menu.Progress.mnemonic=P
 Navigator.menu.Progress.text=Progress
 Navigator.menu.Quit.mnemonic=Q
 Navigator.menu.Quit.text=Quit
-Navigator.menu.QuitTerminate.mnemonic=X
-Navigator.menu.QuitTerminate.text=Quit & Exit Remote
+Navigator.menuItemQuitTerminate.mnemonic=R
+Navigator.menu.QuitTerminate.text=Quit & Stop Remote
 Navigator.menu.Refresh.mnemonic=R
 Navigator.menu.Refresh.text=Refresh
 Navigator.menu.Rename.cannot.rename.current.location=Cannot rename current location
