Fixed #54 initial placement of dialogs with no preferences file

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -296,6 +296,7 @@ Navigator.menu.Quit.mnemonic=Q
 Navigator.menu.Quit.text=Quit
 Navigator.menuItemQuitTerminate.mnemonic=R
 Navigator.menu.QuitTerminate.text=Quit & Stop Remote
+Navigator.menu.QuitTerminate.stop.remote=Stop remote listener process?
 Navigator.menu.Refresh.mnemonic=R
 Navigator.menu.Refresh.text=Refresh
 Navigator.menu.Rename.cannot.rename.current.location=Cannot rename current location
