In a Job added ability of some Tools (Renamer) to use a previous task's Origin information, for #69.

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -89,8 +89,8 @@ JobsUI.select.subscriber.tooltip=Select subscriber
 JobsUI.select.subscriber=-select subscriber-
 JobsUI.select.tool=Select job or tool\:
 JobsUI.stop.currently.running.job=Stop currently running Job?
-JobsUI.subscriber.local=Local Subscriber
-JobsUI.subscriber.remote=Remote Subscriber
+JobsUI.subscriber.local=Local subscriber
+JobsUI.subscriber.remote=Remote subscriber
 JobsUI.task.has.no.origins=Task has no origins: 
 JobsUI.task.has.no.publisher.and.or.subscriber=Task has no publisher and/or subscriber\: 
 JobsUI.title=Jobs
@@ -111,7 +111,7 @@ JunkRemover.button.RemoveRow.text=Remove
 JunkRemover.button.RemoveRow.toolTipText=Delete one or more patterns
 JunkRemover.button.Run.mnemonic=R
 JunkRemover.button.Run.text=Run
-JunkRemover.button.Run.toolTipText=Execute the selected configuration on the selected Browser selection(s)
+JunkRemover.button.Run.toolTipText=Execute the selected configuration on the current Browser selection(s)
 JunkRemover.case=Case?
 JunkRemover.config.cancelled=Junk Remover {0} cancelled
 JunkRemover.displayName=Junk Remover
@@ -413,7 +413,7 @@ Renamer.button.New.text=New
 Renamer.button.New.toolTipText=Add new tool configuration
 Renamer.button.Run.mnemonic=R
 Renamer.button.Run.text=Run
-Renamer.button.Run.toolTipText=Execute the selected configuration on current Browser selection(s)
+Renamer.button.Run.toolTipText=Execute the selected configuration on the current Browser selection(s)
 Renamer.buttonRefresh.mnemonic=F
 Renamer.checkBoxCase.text=Case sensitive
 Renamer.checkBoxInsertAtEnd.text=At end  
@@ -573,3 +573,4 @@ Z.untitled=Untitled
 Z.would.delete=Would delete: 
 Z.would.rename=Would rename: 
 Z.yes=Yes
+JobsUI.cached.task=From: 
