Fixed minor task validation bug related to #69

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -574,3 +574,5 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 JobsUI.cached.task=From: 
+JobsUI.tool.not.found=Tool not found: 
+
