--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -415,6 +415,8 @@ Renamer.button.Run.mnemonic=R
 Renamer.button.Run.text=Run
 Renamer.button.Run.toolTipText=Execute the selected configuration on the current Browser selection(s)
 Renamer.buttonRefresh.mnemonic=F
+Renamer.checkBoxFilesOnly.text=Files only
+Renamer.checkBoxFilesOnly.toolTipText=If tool should exclude directories
 Renamer.checkBoxCase.text=Case sensitive
 Renamer.checkBoxInsertAtEnd.text=At end  
 Renamer.checkBoxInsertAtEnd.toolTipText=Ignore Position and insert at the end
@@ -426,7 +428,7 @@ Renamer.checkBoxNumberingAtEnd.toolTipText=Ignore Position and insert at the end
 Renamer.checkBoxNumberingFromEnd.text_2=From end  
 Renamer.checkBoxNumberingOverwrite.text_2=Overwrite  
 Renamer.checkBoxRecursive.text=Recursive
-Renamer.checkBoxRecursive.toolTipText=If tool should process subdirectories of any selected directories
+Renamer.checkBoxRecursive.toolTipText=If tool should go into subdirectories of any selected directories
 Renamer.checkBoxRegularExpr.text=Regular expression
 Renamer.checkBoxRemoveFromEnd.text=From end
 Renamer.config.cancelled=Renamer {0} cancelled
