--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -5,6 +5,15 @@
 # "Z." items are shared
 #
 # This needs to be all lowercase
+EmptyDirectoryFinder.buttonRun.mnemonic=R
+EmptyDirectoryFinder.buttonRun.text=Run
+EmptyDirectoryFinder.buttonRun.toolTipText=Execute the selected configuration on the current Browser selection(s)
+EmptyDirectoryFinder.cancelButton.text=Cancel
+EmptyDirectoryFinder.checkBoxAutoDelete.text=Auto-delete
+EmptyDirectoryFinder.checkBoxAutoDelete.toolTipText=If empty directories should be deleted automatically
+EmptyDirectoryFinder.labelHelp.toolTipText=Tool help
+EmptyDirectoryFinder.okButton.text=OK
+EmptyDirectoryFinder.this.title=Empty Directory Finder
 jobs.displayName=Job
 #-----------------------------------------
 About.title=About
@@ -577,4 +586,5 @@ Z.would.rename=Would rename:
 Z.yes=Yes
 JobsUI.cached.task=From: 
 JobsUI.tool.not.found=Tool not found: 
+EmptyDirectoryFinder.help=Empty Directory Finder Help
 
