--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -5,12 +5,19 @@
 # "Z." items are shared
 #
 # This needs to be all lowercase
+EmptyDirectoryFinder.buttonAll.mnemonic=A
+EmptyDirectoryFinder.buttonAll.text=All
+EmptyDirectoryFinder.buttonAll.toolTipText=Select all empty directories
+EmptyDirectoryFinder.buttonNone.mnemonic_2=N
+EmptyDirectoryFinder.buttonNone.text=None
+EmptyDirectoryFinder.buttonNone.toolTipText=Unselect all empty directories
 EmptyDirectoryFinder.buttonRun.mnemonic=R
 EmptyDirectoryFinder.buttonRun.text=Run
-EmptyDirectoryFinder.buttonRun.toolTipText=Execute the selected configuration on the current Browser selection(s)
+EmptyDirectoryFinder.buttonRun.toolTipText=Execute the tool on the currently selected Browser Collection
+EmptyDirectoryFinder.buttonDelete.mnemonic_2=D
+EmptyDirectoryFinder.buttonDelete.text=Delete
+EmptyDirectoryFinder.buttonDelete.toolTipText=Delete the selection(s)
 EmptyDirectoryFinder.cancelButton.text=Cancel
-EmptyDirectoryFinder.checkBoxAutoDelete.text=Auto-delete
-EmptyDirectoryFinder.checkBoxAutoDelete.toolTipText=If empty directories should be deleted automatically
 EmptyDirectoryFinder.labelHelp.toolTipText=Tool help
 EmptyDirectoryFinder.okButton.text=OK
 EmptyDirectoryFinder.this.title=Empty Directory Finder
@@ -587,4 +594,11 @@ Z.yes=Yes
 JobsUI.cached.task=From: 
 JobsUI.tool.not.found=Tool not found: 
 EmptyDirectoryFinder.help=Empty Directory Finder Help
-
+EmptyDirectoryFinder.directories=Empty Directories
+EmptyDirectoryFinder.run.tool.on.collection=Run tool on the {0} Collection?
+EmptyDirectoryFinder.please.select.a.collection.for.run=Please select a Collection for Run
+EmptyDirectoryFinder.collection.not.loaded=Collection not loaded
+EmptyDirectoryFinder.delete.the.selected.empties=Delete the selected Empties?
+EmptyDirectoryFinder.removing=Removing 
+EmptyDirectoryFinder.removal.of.empties.successful=Removal of empties successful
+EmptyDirectoryFinder.empty.directories=\ empty directories
