--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -4,25 +4,7 @@
 # Trailing spaces are important
 # "Z." items are shared
 #
-# This needs to be all lowercase
-EmptyDirectoryFinder.buttonAll.mnemonic=A
-EmptyDirectoryFinder.buttonAll.text=All
-EmptyDirectoryFinder.buttonAll.toolTipText=Select all empty directories
-EmptyDirectoryFinder.buttonNone.mnemonic_2=N
-EmptyDirectoryFinder.buttonNone.text=None
-EmptyDirectoryFinder.buttonNone.toolTipText=Unselect all empty directories
-EmptyDirectoryFinder.buttonRun.mnemonic=R
-EmptyDirectoryFinder.buttonRun.text=Run
-EmptyDirectoryFinder.buttonRun.toolTipText=Execute the tool on the currently selected Browser Collection
-EmptyDirectoryFinder.buttonDelete.mnemonic_2=D
-EmptyDirectoryFinder.buttonDelete.text=Delete
-EmptyDirectoryFinder.buttonDelete.toolTipText=Delete the selection(s)
-EmptyDirectoryFinder.cancelButton.text=Cancel
-EmptyDirectoryFinder.labelHelp.toolTipText=Tool help
-EmptyDirectoryFinder.okButton.text=OK
-EmptyDirectoryFinder.this.title=Empty Directory Finder
-jobs.displayName=Job
-#-----------------------------------------
+
 About.title=About
 Browser.add.bookmark=Add Bookmark
 Browser.bookmark.name=bookmark name: 
@@ -44,6 +26,40 @@ Browser.system=System
 BrowserTable.column.modified=Modified
 BrowserTable.column.name=Name
 BrowserTable.column.size=Size
+DuplicateFinder.buttonRun.mnemonic=R
+DuplicateFinder.buttonRun.text=Run
+DuplicateFinder.buttonRun.toolTipText=Execute the tool on the currently selected Browser Collection
+DuplicateFinder.cancelButton.text=Cancel
+DuplicateFinder.checkBoxCrossLibrary.text=Cross-library check
+DuplicateFinder.checkBoxCrossLibrary.toolTipText=If the analysis should check across all libraries
+DuplicateFinder.labelHelp.toolTipText=Tool help
+DuplicateFinder.okButton.text=OK
+DuplicateFinder.this.title=Duplicate Finder
+EmptyDirectoryFinder.buttonAll.mnemonic=A
+EmptyDirectoryFinder.buttonAll.text=All
+EmptyDirectoryFinder.buttonAll.toolTipText=Select all empty directories
+EmptyDirectoryFinder.buttonDelete.mnemonic_2=D
+EmptyDirectoryFinder.buttonDelete.text=Delete
+EmptyDirectoryFinder.buttonDelete.toolTipText=Delete the selection(s)
+EmptyDirectoryFinder.buttonNone.mnemonic_2=N
+EmptyDirectoryFinder.buttonNone.text=None
+EmptyDirectoryFinder.buttonNone.toolTipText=Unselect all empty directories
+EmptyDirectoryFinder.buttonRun.mnemonic=R
+EmptyDirectoryFinder.buttonRun.text=Run
+EmptyDirectoryFinder.buttonRun.toolTipText=Execute the tool on the currently selected Browser Collection
+EmptyDirectoryFinder.cancelButton.text=Cancel
+EmptyDirectoryFinder.collection.not.loaded=Collection not loaded
+EmptyDirectoryFinder.delete.the.selected.empties=Delete the selected Empties?
+EmptyDirectoryFinder.directories=Empty Directories
+EmptyDirectoryFinder.empty.directories=\ empty directories
+EmptyDirectoryFinder.help=Empty Directory Finder Help
+EmptyDirectoryFinder.labelHelp.toolTipText=Tool help
+EmptyDirectoryFinder.okButton.text=OK
+EmptyDirectoryFinder.please.select.a.collection.for.run=Please select a Collection for Run
+EmptyDirectoryFinder.removal.of.empties.successful=Removal of empties successful
+EmptyDirectoryFinder.removing=Removing 
+EmptyDirectoryFinder.run.tool.on.collection=Run tool on the {0} Collection?
+EmptyDirectoryFinder.this.title=Empty Directory Finder
 Job.config.cancelled=Job {0} cancelled
 Job.continuing.job=Continuing job\: 
 Job.executing.job=Executing job\: 
@@ -82,6 +98,7 @@ JobsUI.buttonRun.text=Run
 JobsUI.buttonRun.toolTipText=Execute the selected configuration
 JobsUI.buttonTaskDown.toolTipText=Move task down
 JobsUI.buttonTaskUp.toolTipText=Move task Up
+JobsUI.cached.task=From: 
 JobsUI.generated=Copy (Ctrl-C) job command line\: 
 JobsUI.help=Jobs Help
 JobsUI.job.has.no.tasks=Job has no tasks
@@ -110,6 +127,7 @@ JobsUI.subscriber.remote=Remote subscriber
 JobsUI.task.has.no.origins=Task has no origins: 
 JobsUI.task.has.no.publisher.and.or.subscriber=Task has no publisher and/or subscriber\: 
 JobsUI.title=Jobs
+JobsUI.tool.not.found=Tool not found: 
 JunkRemover.button.AddRow.mnemonic=A
 JunkRemover.button.AddRow.text=Add
 JunkRemover.button.AddRow.toolTipText=Add an empty pattern
@@ -310,9 +328,8 @@ Navigator.menu.Progress.mnemonic=P
 Navigator.menu.Progress.text=Progress
 Navigator.menu.Quit.mnemonic=Q
 Navigator.menu.Quit.text=Quit
-Navigator.menuItemQuitTerminate.mnemonic=R
-Navigator.menu.QuitTerminate.text=Quit & Stop Remote
 Navigator.menu.QuitTerminate.stop.remote=Stop remote listener process?
+Navigator.menu.QuitTerminate.text=Quit & Stop Remote
 Navigator.menu.Refresh.mnemonic=R
 Navigator.menu.Refresh.text=Refresh
 Navigator.menu.Rename.cannot.rename.current.location=Cannot rename current location
@@ -357,6 +374,7 @@ Navigator.menuItemEmptyFinder.text=Empty Directory Finder ...
 Navigator.menuItemExternalTools.displayedMnemonicIndex=9
 Navigator.menuItemExternalTools.mnemonic=T
 Navigator.menuItemGitHubProject.toolTipText=External link
+Navigator.menuItemQuitTerminate.mnemonic=R
 Navigator.menuItemUpdates.mnemonic=U
 Navigator.menuItemUpdates.text=Check for updates ...
 Navigator.open.error.file.not.found=File not found: 
@@ -431,9 +449,9 @@ Renamer.button.Run.mnemonic=R
 Renamer.button.Run.text=Run
 Renamer.button.Run.toolTipText=Execute the selected configuration on the current Browser selection(s)
 Renamer.buttonRefresh.mnemonic=F
+Renamer.checkBoxCase.text=Case sensitive
 Renamer.checkBoxFilesOnly.text=Files only
 Renamer.checkBoxFilesOnly.toolTipText=If tool should exclude directories
-Renamer.checkBoxCase.text=Case sensitive
 Renamer.checkBoxInsertAtEnd.text=At end  
 Renamer.checkBoxInsertAtEnd.toolTipText=Ignore Position and insert at the end
 Renamer.checkBoxInsertFromEnd.text=From end  
@@ -474,8 +492,8 @@ Renamer.tableChanges.toolTipText=Use the Run button to execute a Renamer on curr
 Renamer.task.definition.and.loaded.repository.do.not.match=Task definition and loaded repository do not match
 Renamer.textFieldInsertPosition.toolTipText=Index from 1 where to insert text
 Renamer.textFieldNumberingStart.toolTipText=Starting number
-Renamer.textFieldToInsert.toolTipText=Text to insert
 Renamer.textFieldNumberingZeros.toolTipText=Number of leading zeros, 1 \= 01 for example
+Renamer.textFieldToInsert.toolTipText=Text to insert
 Renamer.title=Renamer
 Renamer.uses.only.one.repository={0} uses only one repository
 Settings.appearance.tab.title=Appearance
@@ -506,11 +524,11 @@ Settings.showTouchConfirmationLabel.text=Confirm touch\:
 Settings.sortCaseSensitiveLabel.text=Sort case-insensitive\:
 Settings.sortFoldersBeforeFilesLabel.text=Sort folders before files\:
 Settings.sortReverseLabel.text=Sort reverse\:
-Settings.tabPlacementLabel.text=Tab placement\:
 Settings.tabPlacement.bottom=Bottom
 Settings.tabPlacement.left=Left
 Settings.tabPlacement.right=Right
 Settings.tabPlacement.top=Top
+Settings.tabPlacementLabel.text=Tab placement\:
 Settings.textField.HintButtonColor.toolTipText=RGB color in hexadecimal
 Settings.this.title=Navigator Settings
 Task.no.repository.is.loaded=No repository is loaded
@@ -591,14 +609,10 @@ Z.untitled=Untitled
 Z.would.delete=Would delete: 
 Z.would.rename=Would rename: 
 Z.yes=Yes
-JobsUI.cached.task=From: 
-JobsUI.tool.not.found=Tool not found: 
-EmptyDirectoryFinder.help=Empty Directory Finder Help
-EmptyDirectoryFinder.directories=Empty Directories
-EmptyDirectoryFinder.run.tool.on.collection=Run tool on the {0} Collection?
-EmptyDirectoryFinder.please.select.a.collection.for.run=Please select a Collection for Run
-EmptyDirectoryFinder.collection.not.loaded=Collection not loaded
-EmptyDirectoryFinder.delete.the.selected.empties=Delete the selected Empties?
-EmptyDirectoryFinder.removing=Removing 
-EmptyDirectoryFinder.removal.of.empties.successful=Removal of empties successful
-EmptyDirectoryFinder.empty.directories=\ empty directories
+jobs.displayName=Job
+DuplicateFinder.please.select.a.collection.for.run=Please select a Collection for Run
+DuplicateFinder.run.tool.on.collection=Run tool on the {0} Collection?
+DuplicateFinder.collection.not.loaded=Collection not loaded
+DuplicateFinder.analyzing.library=Analyzing library
+DuplicateFinder.help=Duplicate Finder Help
+DuplicateFinder.duplicates.items.directories={0} duplicates, {1} items, {2} directories
