--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -26,14 +26,22 @@ Browser.system=System
 BrowserTable.column.modified=Modified
 BrowserTable.column.name=Name
 BrowserTable.column.size=Size
+DuplicateFinder.action=Action
+DuplicateFinder.analyzing.library=Analyzing library
 DuplicateFinder.buttonRun.mnemonic=R
 DuplicateFinder.buttonRun.text=Run
 DuplicateFinder.buttonRun.toolTipText=Execute the tool on the currently selected Browser Collection
-DuplicateFinder.cancelButton.text=Cancel
-DuplicateFinder.checkBoxCrossLibrary.text=Cross-library check
+DuplicateFinder.checkBoxCrossLibrary.mnemonic=C
+DuplicateFinder.checkBoxCrossLibrary.text=Cross-check
 DuplicateFinder.checkBoxCrossLibrary.toolTipText=If the analysis should check across all libraries
+DuplicateFinder.collection.not.loaded=Collection not loaded
+DuplicateFinder.duplicates.items.directories={0} duplicates, scanned {1} items in {2} directories
+DuplicateFinder.go.to.this.item.in.the.browser=Go to this item in the Browser
+DuplicateFinder.goto=Go
+DuplicateFinder.help=Duplicate Finder Help
 DuplicateFinder.labelHelp.toolTipText=Tool help
-DuplicateFinder.okButton.text=OK
+DuplicateFinder.please.select.a.collection.for.run=Please select a Collection for Run
+DuplicateFinder.run.tool.on.collection=Run tool on the {0} Collection?
 DuplicateFinder.this.title=Duplicate Finder
 EmptyDirectoryFinder.buttonAll.mnemonic=A
 EmptyDirectoryFinder.buttonAll.text=All
@@ -47,14 +55,15 @@ EmptyDirectoryFinder.buttonNone.toolTipText=Unselect all empty directories
 EmptyDirectoryFinder.buttonRun.mnemonic=R
 EmptyDirectoryFinder.buttonRun.text=Run
 EmptyDirectoryFinder.buttonRun.toolTipText=Execute the tool on the currently selected Browser Collection
-EmptyDirectoryFinder.cancelButton.text=Cancel
+EmptyDirectoryFinder.closeButton.text=Done
+EmptyDirectoryFinder.closeButton.toolTipText=Close this dialog
 EmptyDirectoryFinder.collection.not.loaded=Collection not loaded
-EmptyDirectoryFinder.delete.the.selected.empties=Delete the selected Empties?
+EmptyDirectoryFinder.delete.the.selected.empties=Delete the selected Empty Directories?
 EmptyDirectoryFinder.directories=Empty Directories
 EmptyDirectoryFinder.empty.directories=\ empty directories
+EmptyDirectoryFinder.empty.items.directories={0} empty directories, scanned {1} items in {2} directories
 EmptyDirectoryFinder.help=Empty Directory Finder Help
 EmptyDirectoryFinder.labelHelp.toolTipText=Tool help
-EmptyDirectoryFinder.okButton.text=OK
 EmptyDirectoryFinder.please.select.a.collection.for.run=Please select a Collection for Run
 EmptyDirectoryFinder.removal.of.empties.successful=Removal of empties successful
 EmptyDirectoryFinder.removing=Removing 
@@ -566,7 +575,6 @@ Transfer.would.rm.directory=\  > Would rm directory:
 Transfer.would.rm.file=\  > Would rm file: 
 Z.are.you.sure.you.want.to.delete.configuration=Are you sure you want to delete configuration: 
 Z.cancel.all.changes=Cancel all changes?
-Z.cancel.changes.toolTipText=Cancel changes and exit
 Z.cancel.changes=Cancel Changes
 Z.cancel.run=Cancel Run
 Z.cancel.the.current.operation=Cancel the current operation?
@@ -578,6 +586,8 @@ Z.copy=\ (copy)
 Z.count=Count: 
 Z.delete.configuration=Delete Configuration
 Z.deleted=Deleted: 
+Z.done.toolTipText=Close this dialog
+Z.done=Done
 Z.dry.run=\ (dry-run)
 Z.error.parsing=Error parsing\: 
 Z.error.reading=Error reading\: 
@@ -610,9 +620,3 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
-DuplicateFinder.please.select.a.collection.for.run=Please select a Collection for Run
-DuplicateFinder.run.tool.on.collection=Run tool on the {0} Collection?
-DuplicateFinder.collection.not.loaded=Collection not loaded
-DuplicateFinder.analyzing.library=Analyzing library
-DuplicateFinder.help=Duplicate Finder Help
-DuplicateFinder.duplicates.items.directories={0} duplicates, {1} items, {2} directories
