--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -235,6 +235,21 @@ Navigator.button.HintTracking.enabled.tooltip=Hint Tracking is on
 Navigator.button.HintTracking.mnemonic=K
 Navigator.button.HintTracking.text=\ Hint Tracking
 Navigator.button.Up.toolTipText=Up to parent (Alt-Up)
+Navigator.buttonGenerateBackup.mnemonic=G
+Navigator.buttonGenerateBackup.text=Generate
+Navigator.buttonGenerateBackup.toolTipText=Generate a script from the selected configuration
+Navigator.buttonNewBackup.mnemonic=N
+Navigator.buttonCopyBackup.mnemonic=C
+Navigator.buttonCopyBackup.text=Copy
+Navigator.buttonCopyBackup.toolTipText=Copy an existing tool configuration
+Navigator.buttonDeleteBackup.mnemonic=D
+Navigator.buttonDeleteBackup.text=Delete
+Navigator.buttonDeleteBackup.toolTipText=Delete a tool configuration
+Navigator.buttonRunBackup.mnemonic=R
+Navigator.buttonRunBackup.text=Run
+Navigator.buttonRunBackup.toolTipText=Execute the selected configuration on the current Browser selection(s)
+Navigator.buttonNewBackup.text=New
+Navigator.buttonNewBackup.toolTipText=Add new tool configuration
 Navigator.controls.help.title=Navigator Controls
 Navigator.delete.bookmarks=Delete Bookmarks
 Navigator.detected.local.system.as=Detected local system as 
@@ -246,6 +261,7 @@ Navigator.error.writing.hint=Error writing Hint:
 Navigator.initialized=Initialized Navigator
 Navigator.label.StatusLeft.text=Status Left
 Navigator.label.StatusRight.text=Status Right
+Navigator.labelBackupHelp.toolTipText=Tool help
 Navigator.libraries=\ libraries
 Navigator.menu.About.mnemonic=A
 Navigator.menu.About.text=About ...
@@ -418,6 +434,8 @@ Navigator.scrollPane.Log.tab.mnemonic=L
 Navigator.scrollPane.Log.tab.title=Log
 Navigator.scrollPane.Properties.tab.mnemonic=P
 Navigator.scrollPane.Properties.tab.title=Properties
+Navigator.scrollPaneBackupLog.tab.mnemonic=L
+Navigator.scrollPaneBackupLog.tab.title=Log
 Navigator.splitPane.Backup.tab.mnemonic=A
 Navigator.splitPane.Backup.tab.title=BackUp
 Navigator.splitPane.Browser.tab.mnemonic=R
@@ -574,6 +592,7 @@ Transfer.would.rm.file=\  > Would rm file:
 Z.are.you.sure.you.want.to.delete.configuration=Are you sure you want to delete configuration: 
 Z.cancel.all.changes=Cancel all changes?
 Z.cancel.changes=Cancel Changes
+Z.cancel.changes.toolTipText=Z.cancel.changes
 Z.cancel.run=Cancel Run
 Z.cancel.the.current.operation=Cancel the current operation?
 Z.cancel=Cancel
