Progress prior to refactoring Backup to Operations

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -117,9 +117,9 @@ JobsUI.labelPub.text=text
 JobsUI.labelSub.text=text
 JobsUI.labelTasks.text=Tasks
 JobsUI.publisher.specific=Specific publisher
-JobsUI.pubsub.select.publisher.or.subscriber=Select Publisher or Subscriber
-JobsUI.pubsub.select.publisher=Select Publisher
-JobsUI.pubsub.select.subscriber=Select Subscriber
+JobsUI.combo.select.publisher.or.subscriber=Select Publisher or Subscriber
+JobsUI.combo.select.publisher=Select Publisher
+JobsUI.combo.select.subscriber=Select Subscriber
 JobsUI.remove.N.origins=Remove {0} origins?
 JobsUI.remove.N.tasks=Remove {0} tasks?
 JobsUI.run.as.defined=Run "{0}" as defined?
@@ -235,21 +235,6 @@ Navigator.button.HintTracking.enabled.tooltip=Hint Tracking is on
 Navigator.button.HintTracking.mnemonic=K
 Navigator.button.HintTracking.text=\ Hint Tracking
 Navigator.button.Up.toolTipText=Up to parent (Alt-Up)
-Navigator.buttonGenerateBackup.mnemonic=G
-Navigator.buttonGenerateBackup.text=Generate
-Navigator.buttonGenerateBackup.toolTipText=Generate a script from the selected configuration
-Navigator.buttonNewBackup.mnemonic=N
-Navigator.buttonCopyBackup.mnemonic=C
-Navigator.buttonCopyBackup.text=Copy
-Navigator.buttonCopyBackup.toolTipText=Copy an existing tool configuration
-Navigator.buttonDeleteBackup.mnemonic=D
-Navigator.buttonDeleteBackup.text=Delete
-Navigator.buttonDeleteBackup.toolTipText=Delete a tool configuration
-Navigator.buttonRunBackup.mnemonic=R
-Navigator.buttonRunBackup.text=Run
-Navigator.buttonRunBackup.toolTipText=Execute the selected configuration on the current Browser selection(s)
-Navigator.buttonNewBackup.text=New
-Navigator.buttonNewBackup.toolTipText=Add new tool configuration
 Navigator.controls.help.title=Navigator Controls
 Navigator.delete.bookmarks=Delete Bookmarks
 Navigator.detected.local.system.as=Detected local system as 
@@ -261,7 +246,6 @@ Navigator.error.writing.hint=Error writing Hint:
 Navigator.initialized=Initialized Navigator
 Navigator.label.StatusLeft.text=Status Left
 Navigator.label.StatusRight.text=Status Right
-Navigator.labelBackupHelp.toolTipText=Tool help
 Navigator.libraries=\ libraries
 Navigator.menu.About.mnemonic=A
 Navigator.menu.About.text=About ...
@@ -434,12 +418,10 @@ Navigator.scrollPane.Log.tab.mnemonic=L
 Navigator.scrollPane.Log.tab.title=Log
 Navigator.scrollPane.Properties.tab.mnemonic=P
 Navigator.scrollPane.Properties.tab.title=Properties
-Navigator.scrollPaneBackupLog.tab.mnemonic=L
-Navigator.scrollPaneBackupLog.tab.title=Log
-Navigator.splitPane.Backup.tab.mnemonic=A
-Navigator.splitPane.Backup.tab.title=BackUp
 Navigator.splitPane.Browser.tab.mnemonic=R
 Navigator.splitPane.Browser.tab.title=Browser
+Navigator.splitPane.Backup.tab.mnemonic=A
+Navigator.splitPane.Backup.tab.title=Backup
 Navigator.splitPane.Libraries.tab.mnemonic=I
 Navigator.splitPane.Libraries.tab.title=Libraries
 Navigator.textField.Location.toolTipText=Location
@@ -494,7 +476,7 @@ Renamer.config.cancelled=Renamer {0} cancelled
 Renamer.displayName=Renamer
 Renamer.error.writing=Error writing: 
 Renamer.help=Renamer Help
-Renamer.labeReplace.text=Replace\: 
+Renamer.labelReplace.text=Replace\: 
 Renamer.labelFind.text=Find\: 
 Renamer.labelFrom.text=From\: 
 Renamer.labelHelp.toolTipText=Tool help
@@ -592,7 +574,7 @@ Transfer.would.rm.file=\  > Would rm file:
 Z.are.you.sure.you.want.to.delete.configuration=Are you sure you want to delete configuration: 
 Z.cancel.all.changes=Cancel all changes?
 Z.cancel.changes=Cancel Changes
-Z.cancel.changes.toolTipText=Z.cancel.changes
+Z.cancel.changes.toolTipText=Discard all changes
 Z.cancel.run=Cancel Run
 Z.cancel.the.current.operation=Cancel the current operation?
 Z.cancel=Cancel
@@ -626,7 +608,8 @@ Z.refresh=Refresh
 Z.remote.lowercase=remote
 Z.remote.uppercase=Remote 
 Z.renamed=Renamed: 
-Z.save.changes.toolTipText=Save changes and exit
+Z.save=Save
+Z.save.toolTip.text=Save all changes
 Z.skipping.child=Skipping {0} child of {1} 
 Z.skipping=Skipping 
 Z.subscriber=Subscriber
@@ -637,3 +620,34 @@ Z.would.delete=Would delete:
 Z.would.rename=Would rename: 
 Z.yes=Yes
 jobs.displayName=Job
+Backup.buttonGenerate.mnemonic=G
+Backup.buttonGenerate.text=Generate
+Backup.buttonGenerate.toolTipText=Generate a script from the selected configuration
+Backup.buttonNew.mnemonic=N
+Backup.buttonCopy.mnemonic=C
+Backup.buttonCopy.text=Copy
+Backup.buttonCopy.toolTipText=Copy an existing tool configuration
+Backup.buttonDelete.mnemonic=D
+Backup.buttonDelete.text=Delete
+Backup.buttonDelete.toolTipText=Delete a tool configuration
+Backup.buttonRun.mnemonic=R
+Backup.buttonRun.text=Run
+Backup.buttonRun.toolTipText=Execute the selected configuration on the current Browser selection(s)
+Backup.buttonNew.text=New
+Backup.buttonNew.toolTipText=Add new tool configuration
+Backup.labelHelp.toolTipText=Tool help
+Backup.scrollPaneLog.tab.mnemonic=L
+Backup.scrollPaneLog.tab.title=Log
+
+Backup.mode.localPublish=Local publish
+Backup.mode.remotePublish=Remote publish, -r P for -r S
+Backup.mode.subscriberListener=Subscriber listener, -r S for -r P|N
+Backup.mode.job=Job, -j
+Backup.mode.hintServer=Hint status server, -H
+Backup.mode.publisherTerminal=Publisher terminal, -r M for -r S
+Backup.mode.publisherListener=Publisher listener, -r L for -r T
+Backup.mode.subscriberTerminal=Subscriber terminal, -r T for -r L
+Backup.mode.hintForceQuit=Hint server force quit, -Q
+Backup.mode.subscriberForceQuit=Subscriber force quit, -G
+Backup.mode.select.type=Select desired mode:
+Backup.mode.type.title=New ELS Operation
