Progress on the Operations tab #63

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -117,9 +117,9 @@ JobsUI.labelPub.text=text
 JobsUI.labelSub.text=text
 JobsUI.labelTasks.text=Tasks
 JobsUI.publisher.specific=Specific publisher
-JobsUI.combo.select.publisher.or.subscriber=Select Publisher or Subscriber
-JobsUI.combo.select.publisher=Select Publisher
-JobsUI.combo.select.subscriber=Select Subscriber
+JobsUI.combo.select.publisher.or.subscriber=Select Publisher or Subscriber:
+JobsUI.combo.select.publisher=Select Publisher:
+JobsUI.combo.select.subscriber=Select Subscriber:
 JobsUI.remove.N.origins=Remove {0} origins?
 JobsUI.remove.N.tasks=Remove {0} tasks?
 JobsUI.run.as.defined=Run "{0}" as defined?
@@ -375,6 +375,14 @@ Navigator.menu.View.mnemonic=V
 Navigator.menu.View.text=View
 Navigator.menu.Windows.mnemonic=W
 Navigator.menu.Windows.text=Window
+Navigator.menuItemWhitelist.mnemonic=W
+Navigator.menuItemWhitelist.text=Whitelist ...
+Navigator.menuItemHintKeys.mnemonic=H
+Navigator.menuItemHintKeys.text=Hint Keys ...
+Navigator.menuItemBlacklist.mnemonic=B
+Navigator.menuItemBlacklist.text=Blacklist ...
+Navigator.menuItemAuthKeys.mnemonic=A
+Navigator.menuItemAuthKeys.text=Authentication Keys ...
 Navigator.menuItemAutoRefresh.mnemonic=A
 Navigator.menuItemAutoRefresh.text=Auto-Refresh
 Navigator.menuItemDocumentation.toolTipText=External link
@@ -386,6 +394,7 @@ Navigator.menuItemGitHubProject.toolTipText=External link
 Navigator.menuItemQuitTerminate.mnemonic=R
 Navigator.menuItemUpdates.mnemonic=U
 Navigator.menuItemUpdates.text=Check for updates ...
+Navigator.menuSystem.mnemonic=S
 Navigator.open.error.file.not.found=File not found: 
 Navigator.open.error.select.a.file.only=Select a file only
 Navigator.panel.CollectionOne.tab.mnemonic=1
@@ -396,6 +405,9 @@ Navigator.panel.SystemOne.tab.mnemonic=2
 Navigator.panel.SystemOne.tab.title=Publisher 2
 Navigator.panel.SystemTwo.tab.mnemonic=4
 Navigator.panel.SystemTwo.tab.title=Subscriber 4
+Navigator.panelCollectionTwo.tab.mnemonicIndex=11
+Navigator.panelSystemOne.tab.mnemonicIndex=10
+Navigator.panelSystemTwo.tab.mnemonicIndex=11
 Navigator.popupMenu.Bottom.mnemonic=B
 Navigator.popupMenu.Bottom.text=Bottom
 Navigator.popupMenu.Clear.mnemonic=C
@@ -420,8 +432,8 @@ Navigator.scrollPane.Properties.tab.mnemonic=P
 Navigator.scrollPane.Properties.tab.title=Properties
 Navigator.splitPane.Browser.tab.mnemonic=R
 Navigator.splitPane.Browser.tab.title=Browser
-Navigator.splitPane.Backup.tab.mnemonic=A
-Navigator.splitPane.Backup.tab.title=Backup
+Navigator.splitPaneOperations.tab.mnemonic=P
+Navigator.splitPane.Operations.tab.title=Operations
 Navigator.splitPane.Libraries.tab.mnemonic=I
 Navigator.splitPane.Libraries.tab.title=Libraries
 Navigator.textField.Location.toolTipText=Location
@@ -437,11 +449,11 @@ Properties.path=Path:
 Properties.size=Size: 
 Properties.sources=Source(s): {0}
 Properties.type=Type: 
-RenameUI.type.combobox.case.change=Case change
-RenameUI.type.combobox.insert=Insert
-RenameUI.type.combobox.numbering=Numbering
-RenameUI.type.combobox.remove=Remove
-RenameUI.type.combobox.replace=Replace
+RenameUI.type.combobox.0.case.change=Case change
+RenameUI.type.combobox.1.insert=Insert
+RenameUI.type.combobox.2.numbering=Numbering
+RenameUI.type.combobox.3.remove=Remove
+RenameUI.type.combobox.4.replace=Replace
 RenameUI.type.combobox.select.type=Select type:
 Renamer.button.Copy.mnemonic=C
 Renamer.button.Copy.text=Copy
@@ -504,7 +516,7 @@ Renamer.textFieldToInsert.toolTipText=Text to insert
 Renamer.title=Renamer
 Renamer.uses.only.one.repository={0} uses only one repository
 Settings.appearance.tab.title=Appearance
-Settings.backupPanel.tab.title=Backup
+Settings.operationsPanel.tab.title=Operations
 Settings.browserPanel.tab.title=Browser
 Settings.button.ChooseColor.text=Choose
 Settings.button.ChooseColor.toolTipText=Select color of Hint Tracking button
@@ -601,7 +613,7 @@ Z.not.found=\ not found
 Z.ok=Ok
 Z.open=Open
 Z.please.rename.the.existing=Please rename the existing 
-Z.please.wait.for.the.current.operation.to.finish=Please wait for the current operation to finish
+Z.please.wait.for.the.current.Operations.to.finish=Please wait for the current operation to finish
 Z.publisher=Publisher
 Z.refresh.tooltip.text=Refresh examples with Browser selection(s)
 Z.refresh=Refresh
@@ -619,35 +631,86 @@ Z.untitled=Untitled
 Z.would.delete=Would delete: 
 Z.would.rename=Would rename: 
 Z.yes=Yes
+DuplicateFinder.running=Running Duplicate Finder
+EmptyDirectoryFinder.running=Running Empty Directory Finder
+Z.stop.run.after.scan=Stop run after scan?
+Z.scanning=Scanning ...
+Z.requesting.collection.data.from.remote=Requesting collection data from remote ...
 jobs.displayName=Job
-Backup.buttonGenerate.mnemonic=G
-Backup.buttonGenerate.text=Generate
-Backup.buttonGenerate.toolTipText=Generate a script from the selected configuration
-Backup.buttonNew.mnemonic=N
-Backup.buttonCopy.mnemonic=C
-Backup.buttonCopy.text=Copy
-Backup.buttonCopy.toolTipText=Copy an existing tool configuration
-Backup.buttonDelete.mnemonic=D
-Backup.buttonDelete.text=Delete
-Backup.buttonDelete.toolTipText=Delete a tool configuration
-Backup.buttonRun.mnemonic=R
-Backup.buttonRun.text=Run
-Backup.buttonRun.toolTipText=Execute the selected configuration on the current Browser selection(s)
-Backup.buttonNew.text=New
-Backup.buttonNew.toolTipText=Add new tool configuration
-Backup.labelHelp.toolTipText=Tool help
-Backup.scrollPaneLog.tab.mnemonic=L
-Backup.scrollPaneLog.tab.title=Log
 
-Backup.mode.localPublish=Local publish
-Backup.mode.remotePublish=Remote publish, -r P for -r S
-Backup.mode.subscriberListener=Subscriber listener, -r S for -r P|N
-Backup.mode.job=Job, -j
-Backup.mode.hintServer=Hint status server, -H
-Backup.mode.publisherTerminal=Publisher terminal, -r M for -r S
-Backup.mode.publisherListener=Publisher listener, -r L for -r T
-Backup.mode.subscriberTerminal=Subscriber terminal, -r T for -r L
-Backup.mode.hintForceQuit=Hint server force quit, -Q
-Backup.mode.subscriberForceQuit=Subscriber force quit, -G
-Backup.mode.select.type=Select desired mode:
-Backup.mode.type.title=New ELS Operation
+Operations.buttonGenerate.mnemonic=G
+Operations.buttonGenerate.text=Generate
+Operations.buttonGenerate.toolTipText=Generate a script from the selected configuration
+Operations.buttonNew.mnemonic=N
+Operations.buttonCopy.mnemonic=C
+Operations.buttonCopy.text=Copy
+Operations.buttonCopy.toolTipText=Copy an existing tool configuration
+Operations.buttonDelete.mnemonic=D
+Operations.buttonDelete.text=Delete
+Operations.buttonDelete.toolTipText=Delete a tool configuration
+Operations.buttonRun.mnemonic=R
+Operations.buttonRun.text=Run
+Operations.buttonRun.toolTipText=Execute the selected configuration on the current Browser selection(s)
+Operations.buttonNew.text=New
+Operations.buttonNew.toolTipText=Add new tool configuration
+Operations.labelHelp.toolTipText=Tool help
+Operations.scrollPaneLog.tab.mnemonic=L
+Operations.scrollPaneLog.tab.title=Log
+Operations.labelOperationJob.text=Job\:
+Operations.labelOperationNavigatorCheckbox.text=Navigator\:
+Operations.comboBoxOperationTargets.prototypeDisplayValue=Targets, forced
+Operations.comboBoxOperationWhatsNew.prototypeDisplayValue=What's New, all
+z.run.cancelled=Run cancelled
+Operations.mode.localPublish=Local publish
+Operations.mode.remotePublish=Remote publish, -r P for -r S
+Operations.mode.subscriberListener=Subscriber listener, -r S for -r P|M
+Operations.mode.job=Job, -j
+Operations.mode.hintServer=Hint status server, -H
+Operations.mode.publisherTerminal=Publisher terminal, -r M for -r S
+Operations.mode.publisherListener=Publisher listener, -r L for -r T
+Operations.mode.subscriberTerminal=Subscriber terminal, -r T for -r L
+Operations.mode.hintForceQuit=Hint server force quit, -Q
+Operations.mode.subscriberForceQuit=Subscriber force quit, -G
+Operations.mode.select.type=Select new ELS operation:
+
+Operations.labelOperationLogLevels.text=Console/Debug level\:
+Operations.labelOperationIncludeExclude.text=Include/Exclude\:
+Operations.labelOperationCrossCheck.text=Cross-check\:
+Operations.labelOperationDryRun.text=Dry Run\:
+Operations.labelOperationNoBackfill.text=No back-fill\:
+Operations.labelOperationOverwrite.text=Overwrite\:
+Operations.labelOperationPreservedDates.text=Preserve Dates\:
+Operations.labelOperationDecimalScale.text=Decimal scale\:
+Operations.labelOperationValidate.text=Validate\:
+Operations.labelOperationDuplicates.text=Duplicates\:
+Operations.labelOperationKeepGoing.text=Keep going\:
+Operations.labelOperationIgnored.text=Ignored\:
+Operations.labelOperationEmptyDirectories.text=Empty Directories\:
+Operations.labelOperationQuitStatusServer.text=Quit Status Server\:
+Operations.labelOperationExportItems.text=Export items\:
+Operations.labelOperationExportText.text=Export text\:
+Operations.labelOperationsMismatches.text=Mismatches\:
+
+Operations.buttonOperationAddIncludeExclude.mnemonic=A
+Operations.buttonOperationAddIncludeExclude.text=Add
+Operations.buttonOperationAddIncludeExclude.toolTipText=Add a library to include or exclude
+Operations.buttonOperationRemoveIncludeExclude.mnemonic=E
+Operations.buttonOperationRemoveIncludeExclude.text=Remove
+Operations.buttonOperationRemoveIncludeExclude.toolTipText=Delete one or more libraries
+
+Operations.comboBoxOperationHintKeys.prototypeDisplayValue=Hint keys, only
+Operations.comboBoxOperationHintsAndServer.prototypeDisplayValue=Hint Server\:
+Operations.comboBoxOperationLog.prototypeDisplayValue=Log, overwrite\:
+
+Operations.comboBoxOperationTargets.0.targets=Targets\:
+Operations.comboBoxOperationTargets.1.targetsForced=Targets, forced\:
+Operations.comboBoxOperationWhatsNew.0.whatsNew=What's New\:
+Operations.comboBoxOperationWhatsNew.1.whatsNewAll=What's New, all\:
+Operations.comboBoxOperationHintKeys.0.keys=Hint keys\:
+Operations.comboBoxOperationHintKeys.1.keysOnly=Hint keys, only\:
+Operations.comboBoxOperationHintsAndServer.0.hints=Hints\:
+Operations.comboBoxOperationHintsAndServer.1.hintServer=Hint Server\:
+Operations.comboBoxOperationLog.0.log=Log\:
+Operations.comboBoxOperationLog.1.logOverwrite=Log, overwrite\:
+
+Operations.displayName=Operations
