Continued progress on the Operations tab #63

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -108,7 +108,7 @@ JobsUI.buttonRun.toolTipText=Execute the selected configuration
 JobsUI.buttonTaskDown.toolTipText=Move task down
 JobsUI.buttonTaskUp.toolTipText=Move task Up
 JobsUI.cached.task=From: 
-JobsUI.generated=Copy (Ctrl-C) job command line\: 
+Z.generated=Copy (Ctrl-C) the command line\: 
 JobsUI.help=Jobs Help
 JobsUI.job.has.no.tasks=Job has no tasks
 JobsUI.labelHelp.toolTipText=Jobs help
@@ -170,6 +170,7 @@ JunkRemover.title=Junk Remover
 JunkRemover.uses.only.one.repository={0} uses only one repository
 MainFrame.cancelling.transfers.at.user.request=Cancelling transfer(s) at user request
 MainFrame.transfers.are.active.are.you.sure=Transfer(s) are active. Are you sure you want to end the program?
+MainFrame.unsaved.changes.are.you.sure=There are unsaved changes. Are you sure you want to quit?
 NavHelp.error.opening.help.file=Error opening help file: 
 NavHelp.name=NavHelp
 NavHelp.title=NavHelp
@@ -246,6 +247,7 @@ Navigator.error.writing.hint=Error writing Hint:
 Navigator.initialized=Initialized Navigator
 Navigator.label.StatusLeft.text=Status Left
 Navigator.label.StatusRight.text=Status Right
+Operations.labelOperationTargets.text=Targets\:
 Navigator.libraries=\ libraries
 Navigator.menu.About.mnemonic=A
 Navigator.menu.About.text=About ...
@@ -702,8 +704,6 @@ Operations.comboBoxOperationHintKeys.prototypeDisplayValue=Hint keys, only
 Operations.comboBoxOperationHintsAndServer.prototypeDisplayValue=Hint Server\:
 Operations.comboBoxOperationLog.prototypeDisplayValue=Log, overwrite\:
 
-Operations.comboBoxOperationTargets.0.targets=Targets\:
-Operations.comboBoxOperationTargets.1.targetsForced=Targets, forced\:
 Operations.comboBoxOperationWhatsNew.0.whatsNew=What's New\:
 Operations.comboBoxOperationWhatsNew.1.whatsNewAll=What's New, all\:
 Operations.comboBoxOperationHintKeys.0.keys=Hint keys\:
@@ -714,3 +714,7 @@ Operations.comboBoxOperationLog.0.log=Log\:
 Operations.comboBoxOperationLog.1.logOverwrite=Log, overwrite\:
 
 Operations.displayName=Operations
+Operations.stop.running.operation=Stop running operation?
+Operations.config.cancelled=Operation {0} cancelled
+Operations.help=Operations Help
+Operations.run.as.defined=Run "{0}" as defined with current publisher/subscriber?
